2007-06-30  Adam Roben  <aroben@apple.com>

        Don't take the address of temporary values to appease MSVC /W4

        Reviewed by Oliver.

        No regression test possible.

        * platform/win/PopupMenuWin.cpp:
        (WebCore::PopupMenu::invalidateItem):
        (WebCore::PopupMenu::valueChanged):
        (WebCore::PopupWndProc):
        * platform/win/ScrollViewWin.cpp:
        (WebCore::ScrollView::ScrollViewPrivate::scrollBackingStore):
        * platform/win/UniscribeController.cpp:
        (WebCore::UniscribeController::shapeAndPlaceItem):
        * platform/win/WidgetWin.cpp:
        (WebCore::Widget::invalidateRect):

2007-06-29  Adam Roben  <aroben@apple.com>

        Make an int -> UINT conversion explicit that MSVC /W4 complains about

        Reviewed by John and Oliver.

        No regression test possible.

        * platform/win/SoundWin.cpp:

2007-06-29  Adam Roben  <aroben@apple.com>

        Remove unreachable code uncovered by MSVC /W4

        Reviewed by Oliver.

        No regression test possible.

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::createPattern):
        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::isLiveLink):
        * html/HTMLElement.cpp:
        (WebCore::HTMLElement::contentEditable):
        * platform/DeprecatedString.cpp:
        (WebCore::allocateHandle):
        (WebCore::freeHandle):
        * plugins/win/npapi.cpp:
        (pluginViewForInstance):
        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::isWidthSpecified):
        (WebCore::RenderImage::isHeightSpecified):
        * rendering/RenderTheme.cpp:
        (WebCore::RenderTheme::isControlStyled):

2007-06-29  John Sullivan  <sullivan@apple.com>

        Reviewed by Oliver Hunt.
        
        - WebCore support for accessing the set of rectangles that encompass the selected text
        
        * page/Frame.h:
        * page/Frame.cpp: